objects/Amendment_WHL__c.object
<CustomObject>
    <description>Amendment object for WHL.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Amendments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amendment_Effective_Date__c</fullName>
        <label>Amendment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amendment_Expiration_Date__c</fullName>
        <label>Amendment Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amendment_Number__c</fullName>
        <label>Amendment Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amendment_Status__c</fullName>
        <label>Amendment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
                <value>
                    <fullName>Pending CAM Approval</fullName>
                </value>
                <value>
                    <fullName>Sent to Client</fullName>
                </value>
                <value>
                    <fullName>Resent to Client</fullName>
                </value>
                <value>
                    <fullName>Missing Seller Signature</fullName>
                </value>
                <value>
                    <fullName>Missing Guarantor Signature</fullName>
                </value>
                <value>
                    <fullName>Missing Credit Signature</fullName>
                </value>
                <value>
                    <fullName>Fully Executed (completed)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Signature_Date__c</fullName>
        <label>Client Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fully_Executed_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field populated via workflow to indicate that an email has already been sent for Fully Executed Amendments</description>
        <label>Fully Executed Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fully_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fully Executed</label>
        <type>Checkbox</type>
    </fields>
    <label>MRA Amendment</label>
    <nameField>
        <label>Amendment  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MRA Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>